--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<title>Gratitude Clouds</title>
 
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="hadan16.github.io/css/style.css">
 	</head>
 
 	<body>
