--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 		<!-- Javascript sources -->
 		<script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
-		<script src="https://github.com/hadan16/hadan16.github.io/blob/master/js/index.js"></script>
+		<script src="hadan16.github.io/js/index.js"></script>
 
 		<!-- Background audio -->
 		<div id="player" style="position: absolute; top: -9999px; left: -9999px;"></div>
