--- a/index.html
+++ b/index.html
@@ -54,26 +54,30 @@
 			<section class="main-content">
 
 					<h1>What Good is Gratitude?</h2>
-					<p>So what’s really behind our research results—why might gratitude have these transformative effects on people’s lives?</p>
+					<p>So what's the science behind it, and why might gratitude have transformative effects on people’s lives?</p>
 
 
 
 				<p class="hide-show">
 
-					<b>1. Gratitude allows us to celebrate the present.</b> It magnifies positive emotions.
-
-					Research on emotion shows that positive emotions wear off quickly. Our emotional systems like newness. They like novelty. They like change. We adapt to positive life circumstances so that before too long, the new car, the new spouse, the new house—they don’t feel so new and exciting anymore.
-					<br>
-					But gratitude makes us appreciate the value of something, and when we appreciate the value of something, we extract more benefits from it; we’re less likely to take it for granted.
+						<br>   </br>
+					<b>1. Gratitude allows us to celebrate the present.</b>
+					<br>   </br>
+					It magnifies positive emotions. Research on emotion shows that positive emotions wear off quickly. Our emotional systems like newness. They like novelty. They like change. We adapt to positive life circumstances so that before too long, the new car, the new spouse, the new house—they don’t feel so new and exciting anymore. But gratitude makes us appreciate the value of something, and when we appreciate the value of something, we extract more benefits from it; we’re less likely to take it for granted.
+					<br>   </br>
 					In effect, I think gratitude allows us to participate more in life. We notice the positives more, and that magnifies the pleasures you get from life. Instead of adapting to goodness, we celebrate goodness. We spend so much time watching things—movies, computer screens, sports—but with gratitude we become greater participants in our lives as opposed to spectators.
-					<br>
-					<b>2. Gratitude blocks toxic, negative emotions</b>, such as envy, resentment, regret—emotions that can destroy our happiness.
-					<br>
-					This makes sense: You cannot feel envious and grateful at the same time. They’re incompatible feelings. If you’re grateful, you can’t resent someone for having something that you don’t.
-					<br>
-					<b>3. Grateful people are more stress resistant.</b>There’s a number of studies showing that in the face of serious trauma, adversity, and suffering, if people have a grateful disposition, they’ll recover more quickly. I believe gratitude gives people a perspective from which they can interpret negative life events and help them guard against post-traumatic stress and lasting anxiety.
-					<br>
-					<b>4. Grateful people have a higher sense of self-worth.</b>I think that’s because when you’re grateful, you have the sense that someone else is looking out for you—someone else has provided for your well-being, or you notice a network of relationships, past and present, of people who are responsible for helping you get to where you are right now.
+					<br>   </br>
+					<b>2. Gratitude blocks toxic, negative emotions</b>,
+					<br>   </br>
+					such as envy, resentment, regret—emotions that can destroy our happiness. This makes sense: You cannot feel envious and grateful at the same time. They’re incompatible feelings. If you’re grateful, you can’t resent someone for having something that you don’t.
+					<br>   </br>
+					<b>3. Grateful people are more stress resistant.</b>
+					<br>   </br>
+					There’s a number of studies showing that in the face of serious trauma, adversity, and suffering, if people have a grateful disposition, they’ll recover more quickly. I believe gratitude gives people a perspective from which they can interpret negative life events and help them guard against post-traumatic stress and lasting anxiety.
+					<br>   </br>
+					<b>4. Grateful people have a higher sense of self-worth.</b>
+					<br>   </br>
+					I think that’s because when you’re grateful, you have the sense that someone else is looking out for you—someone else has provided for your well-being, or you notice a network of relationships, past and present, of people who are responsible for helping you get to where you are right now.
 
 				</p>
 				<p class="readmore"><a href="#">See More</a></p>
