--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<section class="main-content">
 
 					<h1>What Good is Gratitude?</h2>
-					<p>So what's the science behind it, and why might gratitude have transformative effects on people’s lives?</p>
+					<p style="margin-bottom:-16px;">So what's the science behind it, and why might gratitude have transformative effects on people’s lives?</p>
 
 
 
