--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 		<section class="cloud-content">
-				<h1 class="title">Gratitude Clouds</h1>
+				<h1 class="center">Gratitude Clouds</h1>
 			<div id="clouds">
 				<div class="cloud x1"></div>
 				<div class="cloud x2"></div>
