--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 		<section class="cloud-content">
-				<h1 class="center">Gratitude Clouds</h1>
+				<img class="center" src="/Users/danha/Documents/General Assembly/final_project (new clouds)/hadan16.github.io/images/logo.png" style="width:382px;height:31px;top: 120px;">
 			<div id="clouds">
 				<div class="cloud x1"></div>
 				<div class="cloud x2"></div>
